--- a/contact/index.html
+++ b/contact/index.html
@@ -9,6 +9,7 @@
 </head>
 <body> 
     <h1>Contact</h1>   
+    <!-- CHANGE EMAIL TO ISSMAEL -->
     <form action="mailto:ferragut.sebastian@gmail.com" method="GET">
         <label for="subject">Subject:</label>
         <input name="subject">
