--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="global.js" type="module"></script>
     <script src="index.js" type="module" defer></script>
-    <title>Sebastian Ferragut: Personal site and portfolio</title>
+    <title>Issmael Aziz: Portfolio</title>
 </head>
 <body>
-    <h1>Sebastian Ferragut</h1>
-    <p>I am a third year Data Science major at UCSD.</p>
+    <h1>Issmael Aziz</h1>
+    <p>PLACEHOLDER TEXT DESCRIBING YOUR EXPERIENCE AND SKILLS, CHANGE IMAGE BELOW</p>
+    <!-- CHANGE IMAGE AND TEXT -->
     <img src="images/portfolioself.jpg" alt="Self Portrait" width="120" height="180">
     <h2>Latest Projects</h2>
     <div class="projects">
-        <!-- Dynamically added content will appear here -->
-    </div>
-    <h3>My GitHub Stats</h3>
-    <div id="profile-stats">
         <!-- Dynamically added content will appear here -->
     </div>
 </body>
