--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
 <body> 
     <h1>Contact</h1>   
     <!-- CHANGE EMAIL TO ISSMAEL -->
-    <form action="mailto:ferragut.sebastian@gmail.com" method="GET">
+    <form action="mailto:issmaelaziz@gmail.com" method="GET">
         <label for="subject">Subject:</label>
         <input name="subject">
         <label for="body">Message:</label>
