--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
 </head>
 <body>
     <h1>Issmael Aziz</h1>
-    <p>PLACEHOLDER TEXT DESCRIBING YOUR EXPERIENCE AND SKILLS, CHANGE IMAGE BELOW</p>
-    <!-- CHANGE IMAGE AND TEXT -->
-    <img src="images/portfolioself.jpg" alt="Self Portrait" width="120" height="180">
-    <h2>Latest Projects</h2>
+    <p>Driven and hands-on audio engineer in the San Diego Area with real-world experience recording, mixing, and mastering bands in studio settings.  My goal is to bring your ideas to life and make sure your sound comes through the way you imagined it. Whether you're in a jazz band, metal band, or anything in between, you’ve got a place here.</p>
+
+    <img src="images/headshot.JPG" alt="Self Portrait" width="520" height="360">
+    <!-- 260 : 180  ratio for headshot -->
+    <h2>Contact</h2>
+    <div style="text-align: left; margin-left: 5px; padding-bottom: 10px; margin-bottom: 10px;"></div>
+        <p>Reach me at (858-766-8234)</p>
+        <p>Located in San Diego, CA</p>
+    </div>
+    <h4><a href="mailto:issmaelaziz@gmail.com">issmaelaziz@gmail.co</div>m</a></h4>
+    <h4><a href="https://www.instagram.com/issmaelaziz/" target="_blank">Instagram</a></h4>
+    
+    <!-- Add back in when projects are added -->
+    <!-- <h2>Latest Projects</h2>
     <div class="projects">
-        <!-- Dynamically added content will appear here -->
+    
+    </div> -->
+
+    <h2>Media Gallery</h2>
+    <div class="media-gallery">
+        <img src="images/studio_1.png" alt="Studio Work" width="400" height="300">
+        <img src="images/recital.jpg" alt="Recital Hall" width="400" height="500">
+        <img src="images/studio_gear.jpg" alt="Studio Gear" width="400" height="300">
     </div>
 </body>
 </html>
