--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,8 @@
 </head>
 <body> 
     <h1 class="projects-title">Projects</h1> 
-    <div class="container">
+    <!-- UNHIDE WHEN MORE PROJECTS ADDED TO SHOW FILTERING/SEARCH -->
+    <!-- <div class="container">
         <svg id="projects-plot" viewBox="-50 -50 100 100"></svg>
         <ul class="legend">
         </ul>
@@ -23,7 +24,7 @@
             placeholder="🔍 Search projects…"
         />
         <button class="clear-btn"onclick="clearSearch()">×</button>
-    </div>
+    </div> -->
     <div class="projects">
     </div>
 </body>
